# lab_1_aicd_search_tree

./: CMakeLists.txt  README.md
include/: search_tree.h
src/: search_tree.cc
